# mmt_micromagnetic_demag_signature

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
micromagnetic_demag_signature/: __init__.py  microds.py
micromagnetic_demag_signature/clib/: clib.c  clib.h  mds_clib.pyx
mmt_micromagnetic_demag_signature/: __init__.py  microds.py
mmt_micromagnetic_demag_signature/clib/: clib.c  clib.h  mds_clib.pyx
test/: test_cube_50nm_side_sim-vs-analytic.py
test/analytical_cuboid_code/: cuboid_50nm_centre-at_-35nm_scan-grid_3microm_m_11-1_Bz.npy
test/cuboid_fd_mm_test/: CubeMM.py  cube_mumaxPlus_L_50nm_centerAt_-35nm_dxyz_2nm.npy
test/cuboid_finmag_test/: finmag_50nm_cube_m111.py  finmag_cube_m111.txt
test/cuboid_merrill_test/: convert_to_tec_NOMAG.py  cube_50x50x50.geo  cube_sim.msl  cube_sim_magnetisation_volume.vbox
