[project]
name = "mmt-micromagnetic-demag-signature"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numba>=0.64.0",
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["scikit-build-core", "cython", "numpy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
